# silkworm

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  appveyor.yml  azure-pipelines.yml  install-boost.sh  install-catch2.sh
core/: CMakeLists.txt  account.cpp  account.hpp  common.cpp  common.hpp  db_bucket.cpp  db_bucket.hpp  db_util.hpp  keccak-tiny.h  keccak.hpp  lmdb++.h  lmdb_bucket.cpp  lmdb_bucket.hpp  memdb_bucket.cpp  memdb_bucket.hpp  miner.cpp  miner.hpp  mptrie.cpp  mptrie.hpp  node.cpp  node.hpp  prefix.cpp  prefix.hpp  rlp.cpp  rlp.hpp  state.cpp  state.hpp  sync.cpp  sync.hpp
doc/: .gitignore  biblio.bib  sync_protocol.tex  sync_slides.tex
lab/: CMakeLists.txt  dust_generator.cpp  dust_generator.hpp  sync_emulator.cpp
src/: CMakeLists.txt  db_bucket.hpp  keccak-tiny.c  keccak.hpp  rlp.cpp  rlp.hpp  sync.hpp  util.cpp  util.hpp
test/: CMakeLists.txt  common.cpp  db_bucket.cpp  db_util.cpp  keccak.cpp  lmdb_bucket.cpp  memdb_bucket.cpp  miner.cpp  prefix.cpp  rlp.cpp  state.cpp  tests.cpp  util.cpp
